--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build-css": "node-sass --include-path scss scss/index.scss css/index.css",
+    "build-css": "node-sass --include-path scss scss/index.scss css/*.css",
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
   "repository": {
